@startuml

    enum TipoMovimentacao{
        - saida
        - entrada

    }

    enum Estabelecimento{
        - Loja
        - Lanche
    }


    class Usuario{
        -id
        - nome

    }

    class Movimentacao{
        - dataMov
    }

    class Estoque{
        - nomeProduto
    }

    class Produto{
        - nome
        - valor
        - qtdProdutos
    }

    class Venda{
        - qtdTotal
        - qtdProdutos
    }

    Usuario "1" --> "0..*" Venda
    Usuario "1" --> "0..*" Movimentacao

    Movimentacao "1" --> "1..*" Produto
    Movimentacao "1..*" --> "1" Estoque

    Venda "1..*" -- "1..*" Produto

    Estoque "1" -- "1..*" Produto

    TipoMovimentacao "1" -- "1" Movimentacao

    Estabelecimento "1" -- "1" Movimentacao





@enduml
